syntax = "proto3";
package endpoint;

service EndpointService {
    rpc GetEndpoints (GetEndpointsRequest) returns (stream GetEndpointsResponse);
    rpc UploadEndpoints (UploadEndpointsRequest) returns (UploadEndpointsResponse);
}

message GetEndpointsRequest {
    string email = 1;
}

message Parameter {
    string name = 1;
    string description = 2;
    bool required = 3;
    repeated string alternatives = 4;
}

message Endpoint {
    string id = 1;
    string text = 2;
    string description = 3;
    repeated Parameter parameters = 4;
    string verb = 5;
}

message GetEndpointsResponse {
    repeated Endpoint endpoints = 1;
}

message UploadEndpointsRequest {
    string email = 1;
    bytes file_content = 2;
    string file_name = 3;
}

message UploadEndpointsResponse {
    bool success = 1;
    string message = 2;
    int32 imported_count = 3;
}
